[project]
name = "bcra-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.184.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-sheet-util",
    "requests>=2.32.5",
]

[tool.uv.sources]
google-sheet-util = { git = "https://github.com/agusherrera99/google_sheet_util.git", rev = "main" }
